--- a/DNA/2/index.html
+++ b/DNA/2/index.html
@@ -12,6 +12,9 @@
     overflow-x: hidden;
     outline: none;
   }
+textarea::-webkit-scrollbar {
+    width: 0px;
+}
 
   .button-main-translator {
     justify-self: left;
