--- a/DNA/2/index.html
+++ b/DNA/2/index.html
@@ -12,7 +12,7 @@
     overflow-x: hidden;
     outline: none;
   }
-textarea::-webkit-scrollbar {
+.form-textarea::-webkit-scrollbar {
     width: 0px;
 }
 
