--- a/DNA/2/index.html
+++ b/DNA/2/index.html
@@ -12,10 +12,13 @@
     overflow-x: hidden;
     outline: none;
   }
+  label.form_label {
+    text-align: center;
+    display: block;
+  }
   .form-textarea::-webkit-scrollbar {
     width: 0px;
-}
-
+  }
   .button-main-translator {
     justify-self: left;
   }
