--- a/DNA/2/index.html
+++ b/DNA/2/index.html
@@ -77,10 +77,10 @@
     <textarea class="form-textarea" id="user-input" name="user-input"></textarea>
     <div class="text-counter"></div>
     <p class="error-msg" id="error-msg">что то не так...</p>
-</div>
+  </div> <center>
   <button class="button-main-translator" type="button" id="encodeButton">
        Кодировать
-  </button>
+  </button> </center>
    <div class="form-input-container-output" id="dna-container-output">
     <label class="form_label" for="input-encoded">ДНК</label>
     <span class="loader"></span>
