--- a/DNA/2/index.html
+++ b/DNA/2/index.html
@@ -5,7 +5,7 @@
   <meta content="width=device-width, initial-scale=1" name="viewport">
   <link href="biomem.min.css" rel="stylesheet" type="text/css">
   </head>
-<body>
+<body style="background: #0000003b;">
 
 <style>
   .form-textarea {
