--- a/DNA/2/index.html
+++ b/DNA/2/index.html
@@ -15,6 +15,8 @@
   label.form_label {
     text-align: center;
     display: block;
+    font-weight: 900;
+    color: white;
   }
   .form-textarea::-webkit-scrollbar {
     width: 0px;
