--- a/DNA/2/index.html
+++ b/DNA/2/index.html
@@ -11,6 +11,8 @@
   .form-textarea {
     overflow-x: hidden;
     outline: none;
+    text-align: center;
+    border: 0;
   }
   label.form_label {
     text-align: center;
