--- a/DNA/2/index.html
+++ b/DNA/2/index.html
@@ -12,7 +12,7 @@
     overflow-x: hidden;
     outline: none;
     text-align: center;
-    border: 0;
+    border: 0;padding: 10px;
   }
   label.form_label {
     text-align: center;
