--- a/DNA/2/index.html
+++ b/DNA/2/index.html
@@ -10,7 +10,7 @@
 <style>
   .form-textarea {
     overflow-x: hidden;
-    outline: none;
+    outline: none;border-radius: 8px;
     text-align: center;
     border: 0;padding: 10px;
   }
