--- a/DNA/2/index.html
+++ b/DNA/2/index.html
@@ -76,9 +76,9 @@
     font-size: 1.2rem;
   }
 </style>
-
-<a href="https://habr.com/ru/companies/onlinepatent/articles/727664/"> <img src="0.png"/> </a>
-
+  <center>
+ <a href="https://habr.com/ru/companies/onlinepatent/articles/727664/"> <img src="0.png"/> </a>
+  </center>
 <form class="form-translator-container">
   <div class="form-input-container" id="form-text-dna">
     <label class="form_label" for="user-input">Текст</label>
