--- a/DNA/2/index.html
+++ b/DNA/2/index.html
@@ -11,7 +11,7 @@
   .form-textarea {
     overflow-x: hidden;
     outline: none;border-radius: 8px;
-    text-align: center;
+    text-align: center;font-size: 2em;
     border: 0;padding: 10px;
   }
   label.form_label {
