--- a/DNA/2/index.html
+++ b/DNA/2/index.html
@@ -24,7 +24,7 @@
     width: 0px;
   }
   .button-main-translator {
-    justify-self: left;
+    justify-self: left;border-radius: 4px;
   }
   .text-counter {
     color: #4CAF50;
