--- a/DNA/2/index.html
+++ b/DNA/2/index.html
@@ -27,7 +27,7 @@
     justify-self: left;border-radius: 4px;
   }
   .text-counter {
-    color: #4CAF50;
+    color: #4CAF50;text-align: center;
   }
   .disabled-button {
     opacity: 0.5;
