--- a/DNA/2/index.html
+++ b/DNA/2/index.html
@@ -80,6 +80,7 @@
  <a href="https://habr.com/ru/companies/onlinepatent/articles/727664/"> <img src="0.png"/> </a>
   </center>
   <br>
+<h1 style="text-align:center;">Преобразование цифровой информации в элементы ДНК</h1>
 <form class="form-translator-container">
   <div class="form-input-container" id="form-text-dna">
     <label class="form_label" for="user-input">Текст</label>
