--- a/DNA/2/index.html
+++ b/DNA/2/index.html
@@ -5,7 +5,7 @@
   <meta content="width=device-width, initial-scale=1" name="viewport">
   <link href="biomem.min.css" rel="stylesheet" type="text/css">
   </head>
-<body style="background-color:#0000003b;">
+<body style="background-color:#1b1c1e;">
 
 <style>
   .form-textarea {
