--- a/DNA/2/index.html
+++ b/DNA/2/index.html
@@ -49,7 +49,10 @@
     transform: translate(-50%, -50%);
     display: none;
   }
-
+.button-main-translator {
+    background-color: #00b1f3;
+    color: var(--white);
+}
   .form-input-container-output.loading > .loader {
     display: block;
   }
