--- a/DNA/2/index.html
+++ b/DNA/2/index.html
@@ -52,6 +52,8 @@
 .button-main-translator {
     background-color: #00b1f3;
     color: var(--white);
+}.button-main-translator:hover {
+    background-color: var(--dark-green);
 }
   .form-input-container-output.loading > .loader {
     display: block;
