--- a/DNA/2/index.html
+++ b/DNA/2/index.html
@@ -53,7 +53,7 @@
     background-color: #00b1f3;
     color: var(--white);
 }.button-main-translator:hover {
-    background-color: var(--dark-green);
+    background-color: #005878;
 }
   .form-input-container-output.loading > .loader {
     display: block;
