--- a/DNA/2/index.html
+++ b/DNA/2/index.html
@@ -89,7 +89,7 @@
 <form class="form-translator-container">
   <div class="form-input-container" id="form-text-dna">
     <label class="form_label" for="user-input">информация</label>
-    <textarea class="form-textarea" id="user-input" name="user-input"></textarea>
+    <textarea class="form-textarea" id="user-input" name="user-input" style="background-image:url(https://img.freepik.com/premium-vector/background-with-numbers-on-screen-binary-code-zero-one-computer-code-coding_546559-427.jpg)"></textarea>
     <div class="text-counter"></div>
     <p class="error-msg" id="error-msg">что то не так...</p>
   </div> <center>
@@ -99,7 +99,7 @@
    <div class="form-input-container-output" id="dna-container-output">
     <label class="form_label" for="input-encoded">ДНК</label>
     <span class="loader"></span>
-    <textarea class="form-textarea" id="input-encoded" name="input-encoded" readonly=""></textarea>
+    <textarea class="form-textarea" id="input-encoded" name="input-encoded" readonly="" style="background-image:url(https://thumbs.dreamstime.com/z/dna-spiral-pattern-vector-seamless-simple-style-illustration-91196599.jpg);background-size:321px;"></textarea>
   </div>
  </form>
 </div>
