--- a/DNA/2/index.html
+++ b/DNA/2/index.html
@@ -93,9 +93,8 @@
     <div class="text-counter"></div>
     <p class="error-msg" id="error-msg">что то не так...</p>
   </div> <center>
-  <button class="button-main-translator" type="button" id="encodeButton">
-       Кодировать
-  </button> </center>
+  <button class="button-main-translator" type="button" id="encodeButton" style="font-size: 3em;
+   ">↻</button> </center>
    <div class="form-input-container-output" id="dna-container-output">
     <label class="form_label" for="input-encoded">ДНК</label>
     <span class="loader"></span>
