--- a/DNA/2/index.html
+++ b/DNA/2/index.html
@@ -50,7 +50,7 @@
     display: none;
   }
 .button-main-translator {
-    background-color: #00b1f3;
+    /*background-color: #00b1f3;*/background-color: transparent;
     color: var(--white);
 }.button-main-translator:hover {
     background-color: #005878;
@@ -93,7 +93,7 @@
     <div class="text-counter"></div>
     <p class="error-msg" id="error-msg">что то не так...</p>
   </div> <center>
-  <button class="button-main-translator" type="button" id="encodeButton" style="font-size: 3em;
+  <button class="button-main-translator" type="button" id="encodeButton" style="font-size: 5em;
    ">↻</button> </center>
    <div class="form-input-container-output" id="dna-container-output">
     <label class="form_label" for="input-encoded">ДНК</label>
