--- a/DNA/2/index.html
+++ b/DNA/2/index.html
@@ -88,7 +88,7 @@
 <h3 style="text-align:center;color:white;">Преобразование цифровой информации в элементы ДНК</h3>
 <form class="form-translator-container">
   <div class="form-input-container" id="form-text-dna">
-    <label class="form_label" for="user-input">информация</label>
+    <label class="form_label" for="user-input">любая информация</label>
     <textarea class="form-textarea" id="user-input" name="user-input" style="background-image:url(https://i.pinimg.com/736x/69/a0/f1/69a0f1093d54313490390756bbef52f2.jpg)"></textarea>
     <div class="text-counter"></div>
     <p class="error-msg" id="error-msg">что то не так...</p>
