--- a/DNA/2/index.html
+++ b/DNA/2/index.html
@@ -124,7 +124,7 @@
       } else {
         byteCounter.style.color = ""; // Reset color
         encodeButton.classList.remove("disabled-button");
-        encodeButton.textContent = "Кодировать";
+        encodeButton.textContent = "↻";
       }
     }
   }
