--- a/DNA/2/index.html
+++ b/DNA/2/index.html
@@ -89,7 +89,10 @@
 <form class="form-translator-container">
   <div class="form-input-container" id="form-text-dna">
     <label class="form_label" for="user-input">любая информация</label>
-    <textarea class="form-textarea" id="user-input" name="user-input" style="background-image:url(https://i.pinimg.com/736x/69/a0/f1/69a0f1093d54313490390756bbef52f2.jpg)"></textarea>
+    <textarea class="form-textarea" id="user-input" name="user-input" style="
+    background-blend-mode: lighten;
+    background-color: #ffffffc2;
+    background-image:url(https://i.pinimg.com/736x/69/a0/f1/69a0f1093d54313490390756bbef52f2.jpg)"></textarea>
     <div class="text-counter"></div>
     <p class="error-msg" id="error-msg">что то не так...</p>
   </div> <center>
@@ -98,7 +101,10 @@
    <div class="form-input-container-output" id="dna-container-output">
     <label class="form_label" for="input-encoded">ДНК</label>
     <span class="loader"></span>
-    <textarea class="form-textarea" id="input-encoded" name="input-encoded" readonly="" style="background-image:url(https://thumbs.dreamstime.com/z/dna-spiral-pattern-vector-seamless-simple-style-illustration-91196599.jpg);background-size:321px;"></textarea>
+    <textarea class="form-textarea" id="input-encoded" name="input-encoded" readonly="" style="
+    background-blend-mode: lighten;
+    background-color: #ffffffc2;
+    background-image:url(https://thumbs.dreamstime.com/z/dna-spiral-pattern-vector-seamless-simple-style-illustration-91196599.jpg);background-size:321px;"></textarea>
   </div>
  </form>
 </div>
