--- a/DNA/2/index.html
+++ b/DNA/2/index.html
@@ -189,5 +189,10 @@
 </div>
     </section>
 
+<iframe id="fr" src="https://tools.latticeautomation.com/seqviz/" style="
+    width: 100%;
+    height: 90vh;
+"></iframe>
+
  </body>
 </html>
