--- a/DNA/2/index.html
+++ b/DNA/2/index.html
@@ -189,6 +189,15 @@
 </div>
     </section>
 
+<span style="
+    width: 100%;
+    height: 10vh;
+    display: block;
+    z-index: 5;
+    position: absolute;
+    background-color: #1b1c1e;
+"> </span>
+
 <iframe id="fr" src="https://tools.latticeautomation.com/seqviz/" style="
     width: 100%;
     height: 90vh;
