--- a/DNA/2/index.html
+++ b/DNA/2/index.html
@@ -189,6 +189,8 @@
 </div>
     </section>
 
+<h3 style="text-align:center;color:white;">~ объединить с визуализацией</h3>
+
 <span style="
     width: 100%;
     height: 10vh;
