--- a/DNA/3/index.html
+++ b/DNA/3/index.html
@@ -10,6 +10,7 @@
 
 <!-- partial:index.partial.html -->
 <center><img src="3.jpg"/></center>
+<center><img src="4.jpg"/></center>
 <div id="root">
 </div>
 <!-- partial -->
