--- a/DNA/3/index.html
+++ b/DNA/3/index.html
@@ -9,8 +9,8 @@
 <body>
 
 <!-- partial:index.partial.html -->
-<center><img src="3.jpg"/></center>
-<center><img src="4.jpg"/></center>
+<center><img style="width="100%" src="3.jpg"/></center>
+<center><img style="width="100%" src="4.jpg"/></center>
 <div id="root">
 </div>
 <!-- partial -->
