--- a/DNA/2/index.html
+++ b/DNA/2/index.html
@@ -188,7 +188,9 @@
 </div>
     </section>
 
-<h3 style="text-align:center;color:white;">~ объединить с визуализацией</h3>
+<h3 style="text-align:center;color:white;"><a href="https://cepbep.github.io/DNA/2/" style="
+    color: white;text-decoration: none;
+">~ объединить с визуализацией</a></h3>
 
 <span style="
     width: 100%;
