--- a/DNA/3/index.html
+++ b/DNA/3/index.html
@@ -22,7 +22,6 @@
       annotations: [{ name: "promoter", start: 0, end: 34, direction: 1 }],
       highlights: [{ start: 0, end: 10 }],
       enzymes: ['Q']
-    })
-    .render();</script>
+    }).render();</script>
 </body>
 </html>
