--- a/DNA/index.html
+++ b/DNA/index.html
@@ -1,1 +1,7 @@
-
+<html>
+  <head></head>
+  <body style="
+    background-image: url(https://raw.githubusercontent.com/CEPBEP/cepbep.github.io/master/DNA/m.png);
+    background-size: contain;
+"></body>
+</html>
