--- a/DNA/index.html
+++ b/DNA/index.html
@@ -2,6 +2,8 @@
   <head></head>
   <body style="
     background-image: url(https://raw.githubusercontent.com/CEPBEP/cepbep.github.io/master/DNA/m.png);
-    background-size: contain;
+    background-size: contain;background-repeat: no-repeat;
+    background-color: black;
+    background-position: center;
 "></body>
 </html>
