--- a/DNA/index.html
+++ b/DNA/index.html
@@ -26,8 +26,10 @@
 </defs>
 </svg>
 
-
-<img src="https://raw.githubusercontent.com/CEPBEP/cepbep.github.io/master/DNA/2.png"/>
+<img src="https://raw.githubusercontent.com/CEPBEP/cepbep.github.io/master/DNA/2.png" style="
+    width: 10%;
+    position: absolute;
+">
 
 </body>
 </html>
