--- a/DNA/index.html
+++ b/DNA/index.html
@@ -26,10 +26,12 @@
 </defs>
 </svg>
 
+<center>
 <img src="https://raw.githubusercontent.com/CEPBEP/cepbep.github.io/master/DNA/2.png" style="
     width: 10%;
     position: absolute;
 ">
+</center>
 
 </body>
 </html>
