--- a/DNA/index.html
+++ b/DNA/index.html
@@ -30,6 +30,8 @@
 <img src="https://raw.githubusercontent.com/CEPBEP/cepbep.github.io/master/DNA/2.png" style="
     width: 10%;
     position: absolute;
+    bottom: 0;
+    right: 0;
 ">
 
 </body>
