--- a/DNA/index.html
+++ b/DNA/index.html
@@ -27,6 +27,9 @@
 </svg>
 <br>
 
+
+<div></div>
+
 <img src="https://raw.githubusercontent.com/CEPBEP/cepbep.github.io/master/DNA/2.png" style="
     width: 10%;
     position: absolute;
