--- a/DNA/index.html
+++ b/DNA/index.html
@@ -27,15 +27,15 @@
 </svg>
 <br>
 
-
-<div></div>
-
-<img src="https://raw.githubusercontent.com/CEPBEP/cepbep.github.io/master/DNA/2.png" style="
-    width: 10%;
+<div style="
     position: absolute;
+    width: 100px;
+    height: 100px;
     bottom: 0;
     right: 0;
-">
+    background-image: url(https://raw.githubusercontent.com/CEPBEP/cepbep.github.io/master/DNA/2.png);
+    background-size: contain;
+"></div>
 
 </body>
 </html>
