--- a/DNA/index.html
+++ b/DNA/index.html
@@ -31,12 +31,14 @@
 
 <div style="
     position: absolute;
-    width: 100px;
-    height: 100px;
+    width: 10%;
+    height: 10%;
     bottom: 0;
     right: 0;
     background-image: url(https://raw.githubusercontent.com/CEPBEP/cepbep.github.io/master/DNA/2.png);
     background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
 "></div>
 
 </body>
