--- a/DNA/index.html
+++ b/DNA/index.html
@@ -1,5 +1,7 @@
 <html>
-  <head></head>
+  <head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+</head>
   <body style="
     background-image: url(https://raw.githubusercontent.com/CEPBEP/cepbep.github.io/master/DNA/m.png);
     background-size: contain;background-repeat: no-repeat;
