--- a/DNA/index.html
+++ b/DNA/index.html
@@ -34,8 +34,8 @@
 <div style="
     position: absolute;
     width: 10%;
-    height: 10%;
-    bottom: 0;
+    height: 12%;
+    bottom: 1%;
     right: 0;
     background-image: url(https://raw.githubusercontent.com/CEPBEP/cepbep.github.io/master/DNA/2.png);
     background-size: contain;
