--- a/DNA/index.html
+++ b/DNA/index.html
@@ -36,50 +36,50 @@
 <br>
 
 <svg viewBox="0 0 157.03 167.35" style="position: absolute;top: 2.7%;right: 3%;width:5em;">
-		<path data-name="<g>" d="M151.26 113.81V53.54A20.24 20.24 0 0 0 141.12 36L88.61 5.79a20.25 20.25 0 0 0-20.18 0L15.91 36A20.24 20.24 0 0 0 5.77 53.54v60.27a20.27 20.27 0 0 0 10.14 17.55l52.52 30.2a20.25 20.25 0 0 0 20.18 0l52.51-30.2a20.27 20.27 0 0 0 10.14-17.55z" fill="#a0d6de" opacity=".2"></path>
-		<path d="M99.36 96.64a.45.45 0 0 1-.38-.52.44.44 0 0 1 .51-.38.45.45 0 0 1 .38.52.45.45 0 0 1-.45.38h-.06zm-1.8-.29a.47.47 0 0 1-.38-.52.45.45 0 0 1 .53-.37.44.44 0 0 1 .37.51.45.45 0 0 1-.45.38h-.07zm-1.79-.29a.45.45 0 0 1-.37-.52.44.44 0 0 1 .51-.37.44.44 0 0 1 .38.51.44.44 0 0 1-.45.38h-.07zM94 95.77a.46.46 0 0 1-.38-.51.46.46 0 0 1 .53-.38.45.45 0 0 1 .37.52.46.46 0 0 1-.45.38H94zm-1.79-.28a.45.45 0 0 1-.37-.52.43.43 0 0 1 .51-.37.44.44 0 0 1 .38.51.44.44 0 0 1-.45.38h-.07zm-1.81-.29a.45.45 0 0 1-.38-.51.46.46 0 0 1 .53-.38.44.44 0 0 1 .37.51.46.46 0 0 1-.45.39h-.07zm-1.79-.29a.45.45 0 0 1-.38-.51.44.44 0 0 1 .52-.37.44.44 0 0 1 .38.51.44.44 0 0 1-.45.38h-.07zm-1.79-.28a.45.45 0 0 1-.37-.52.45.45 0 0 1 .52-.37.44.44 0 0 1 .37.51.45.45 0 0 1-.45.38h-.07zM85 94.34a.44.44 0 0 1-.38-.51.44.44 0 0 1 .51-.38.45.45 0 0 1 .38.52.45.45 0 0 1-.45.38H85zm-1.8-.28a.45.45 0 0 1-.37-.52.45.45 0 0 1 .52-.38.46.46 0 0 1 .37.52.45.45 0 0 1-.45.38h-.07zm-1.78-.29a.45.45 0 0 1-.39-.51.47.47 0 0 1 .52-.39.46.46 0 0 1 .38.52.44.44 0 0 1-.45.39h-.06zm-1.8-.29a.44.44 0 0 1-.37-.52.45.45 0 0 1 .52-.37.46.46 0 0 1 .37.52.45.45 0 0 1-.45.38h-.07zm-1.79-.28a.47.47 0 0 1-.38-.53.47.47 0 0 1 .55-.37.46.46 0 0 1 .38.52.44.44 0 0 1-.45.38h-.07zm-1.79-.29a.45.45 0 0 1-.37-.52.46.46 0 0 1 .51-.38.46.46 0 0 1 .38.53.46.46 0 0 1-.45.38h-.07zm-1.79-.28a.47.47 0 0 1-.38-.53.46.46 0 0 1 .52-.37.45.45 0 0 1 .38.52.44.44 0 0 1-.45.38h-.07zm-1.79-.29a.45.45 0 0 1-.37-.52.46.46 0 0 1 .52-.38.46.46 0 0 1 .39.56.46.46 0 0 1-.45.39h-.05z" fill="#2a2b60"></path>
-		<path d="M57.99 73.5l34.06-15.22" fill="#fdd52f"></path>
-		<path d="M57.811 73.092l34.06-15.229.372.83-34.06 15.23zM38.97 39.585l.798-.436L57.31 71.294l-.799.436z" fill="#2a2b60"></path>
-		<circle cx="40.18" cy="40.18" r="6.44" fill="#51b7b7"></circle>
-		<path d="M40.18 47.3a7.12 7.12 0 1 1 7.12-7.12 7.13 7.13 0 0 1-7.12 7.12zm0-12.88a5.76 5.76 0 1 0 5.76 5.76 5.77 5.77 0 0 0-5.76-5.76zm-9.02 74.39l-.72-.55L57.57 73.3l5.3-24.82.89.19-5.35 25.02-.06.09-27.19 35.03z" fill="#2a2b60"></path>
-		<circle cx="63.32" cy="48.58" r="4.31" fill="#51b7b7"></circle>
-		<path d="M63.32 53.56a5 5 0 1 1 5-5 5 5 0 0 1-5 5zm0-8.61a3.63 3.63 0 1 0 3.62 3.63A3.64 3.64 0 0 0 63.32 45z" fill="#2a2b60"></path>
-		<circle cx="32.59" cy="106.74" r="5.45" fill="#51b7b7"></circle>
-		<path d="M32.59 112.87a6.13 6.13 0 1 1 6.14-6.13 6.14 6.14 0 0 1-6.14 6.13zm0-10.9a4.77 4.77 0 1 0 4.78 4.77 4.78 4.78 0 0 0-4.78-4.74zm28.98 1.7l-.64-.65 11.04-10.88-14.34-18.36.72-.56 14.83 19-11.61 11.45z" fill="#2a2b60"></path>
-		<circle cx="72.57" cy="91.89" r="4.31" fill="#51b7b7"></circle>
-		<path d="M72.57 96.88a5 5 0 1 1 5-5 5 5 0 0 1-5 5zm0-8.62a3.63 3.63 0 1 0 3.63 3.63 3.63 3.63 0 0 0-3.63-3.63z" fill="#2a2b60"></path>
-		<circle cx="60.97" cy="103.35" r="4.31" fill="#51b7b7"></circle>
-		<path d="M61 108.33a5 5 0 1 1 5-5 5 5 0 0 1-5 5zm0-8.61a3.63 3.63 0 1 0 3.63 3.63A3.63 3.63 0 0 0 61 99.72z" fill="#2a2b60"></path>
-		<circle cx="57.99" cy="73.5" r="8.21" fill="#fdd52f"></circle>
-		<path d="M58 82.16a8.67 8.67 0 1 1 8.66-8.66A8.67 8.67 0 0 1 58 82.16zm0-16.42a7.76 7.76 0 1 0 7.76 7.76A7.77 7.77 0 0 0 58 65.74zm33.68-6.83l-3.03-21.45.9-.13 2.87 20.31 10.74-4.29.34.84-11.82 4.72z" fill="#2a2b60"></path>
-		<circle cx="89.1" cy="36.43" r="4.31" fill="#51b7b7"></circle>
-		<path d="M89.1 41.41a5 5 0 1 1 5-5 5 5 0 0 1-5 5zm0-8.61a3.63 3.63 0 1 0 3.63 3.63 3.64 3.64 0 0 0-3.63-3.63z" fill="#2a2b60"></path>
-		<circle cx="105.93" cy="52.88" r="4.31" fill="#51b7b7"></circle>
-		<path d="M105.93 57.87a5 5 0 1 1 5-5 5 5 0 0 1-5 5zm0-8.61a3.63 3.63 0 1 0 3.63 3.62 3.62 3.62 0 0 0-3.63-3.62zM25.75 73.65L23.44 57.5l.9-.12 2.2 15.34 23.28-.63.03.91-24.1.65z" fill="#2a2b60"></path>
-		<circle cx="26.38" cy="73.35" r="4.31" fill="#51b7b7"></circle>
-		<path d="M26.37 78.34a5 5 0 0 1-3-1 5 5 0 1 1 3 1zm-2.15-2.07a3.62 3.62 0 0 0 5.07-.76 3.63 3.63 0 0 0-5.83-4.31 3.63 3.63 0 0 0 .76 5.07z" fill="#2a2b60"></path>
-		<circle cx="24.05" cy="57.22" r="4.31" fill="#51b7b7"></circle>
-		<path d="M24 62.21a5 5 0 0 1-2.95-1 5 5 0 0 1-1.05-7 5 5 0 0 1 7-1 5 5 0 0 1-2.22 8.94 4.74 4.74 0 0 1-.78.06zm-2.1-2.07a3.64 3.64 0 0 0 5.1-.77 3.63 3.63 0 1 0-5.07.77z" fill="#2a2b60"></path>
-		<path d="M99.66 96.23l-12.38 17.89" fill="#fdd52f"></path>
-		<path d="M86.915 113.858l12.371-17.9.75.517-12.373 17.9zm13.412-15.326l.685-.598 12.37 14.156-.684.599z" fill="#2a2b60"></path>
-		<circle cx="114.06" cy="113.5" r="6.44" fill="#51b7b7"></circle>
-		<path d="M114.06 120.62h-.26a7 7 0 1 1 .26 0zm0-12.88a6.18 6.18 0 1 0 .22 0zM99.29 96.49L84.85 76.54l17.57.62-.03.9-15.72-.54 13.36 18.44-.74.53z" fill="#2a2b60"></path>
-		<circle cx="85.75" cy="77.31" r="4.31" fill="#51b7b7"></circle>
-		<path d="M85.76 82.3h-.19a5.08 5.08 0 1 1 .19 0zm0-8.61a3.63 3.63 0 0 0-3.62 3.49 3.64 3.64 0 0 0 3.49 3.76 3.63 3.63 0 1 0 .26-7.25z" fill="#2a2b60"></path>
-		<circle cx="102.41" cy="77.61" r="4.31" fill="#51b7b7"></circle>
-		<path d="M102.41 82.6h-.18a5 5 0 0 1-4.8-5.16 5 5 0 1 1 5 5.17zm0-8.61a3.56 3.56 0 1 0 .13 0z" fill="#2a2b60"></path>
-		<circle cx="99.66" cy="96.23" r="8.21" fill="#fdd52f"></circle>
-		<path d="M99.66 104.89h-.32a8.68 8.68 0 0 1-8.34-9 8.67 8.67 0 1 1 8.66 9zm-7.76-9a7.76 7.76 0 1 0 8-7.47 7.78 7.78 0 0 0-8 7.47zm9.29 34.09l-13.85-15.13-6.43 9.62-.76-.5 7.08-10.58 14.63 15.98-.67.61z" fill="#2a2b60"></path>
-		<circle cx="87.54" cy="113.86" r="3.95" fill="#fdd52f"></circle>
-		<path d="M87.55 118.26a4.45 4.45 0 0 1-.81-.08 4.36 4.36 0 0 1-2.83-1.83 4.41 4.41 0 1 1 3.64 1.91zm0-7.89a3.49 3.49 0 0 0-3.42 2.85 3.45 3.45 0 0 0 .55 2.61 3.5 3.5 0 0 0 4.86.91 3.49 3.49 0 0 0-2-6.37z" fill="#2a2b60"></path>
-		<circle cx="102.07" cy="130.47" r="4.31" fill="#51b7b7"></circle>
-		<path d="M102.08 135.46a4.86 4.86 0 0 1-.92-.09 4.92 4.92 0 0 1-3.2-2.08 5 5 0 1 1 6.93 1.29 4.92 4.92 0 0 1-2.81.88zm0-8.61a3.62 3.62 0 1 0 3 1.57 3.66 3.66 0 0 0-3.01-1.57z" fill="#2a2b60"></path>
-		<circle cx="78.89" cy="126.42" r="4.31" fill="#51b7b7"></circle>
-		<path d="M78.89 131.4a5 5 0 0 1-4.12-2.16 5 5 0 0 1 1.3-6.93 4.88 4.88 0 0 1 3.73-.79 5 5 0 0 1-.91 9.88zm-3-2.93a3.63 3.63 0 1 0 3.66-5.62 3.6 3.6 0 0 0-2.72.58 3.64 3.64 0 0 0-.94 5zm56.81-14.91l-1.64-15.41-23.29-.23.01-.9 24.1.23 1.72 16.22-.9.09z" fill="#2a2b60"></path>
-		<circle cx="131.25" cy="97.52" r="4.31" fill="#51b7b7"></circle>
-		<path d="M131.24 102.51a5 5 0 1 1 3.11-8.89 5 5 0 0 1-2.54 8.86 5.44 5.44 0 0 1-.57.03zm0-8.62h-.41a3.62 3.62 0 0 0-1.85 6.44 3.63 3.63 0 0 0 5.86-3.25 3.66 3.66 0 0 0-1.34-2.43 3.66 3.66 0 0 0-2.25-.76z" fill="#2a2b60"></path>
+		<path data-name="<g>" d="M151.26 113.81V53.54A20.24 20.24 0 0 0 141.12 36L88.61 5.79a20.25 20.25 0 0 0-20.18 0L15.91 36A20.24 20.24 0 0 0 5.77 53.54v60.27a20.27 20.27 0 0 0 10.14 17.55l52.52 30.2a20.25 20.25 0 0 0 20.18 0l52.51-30.2a20.27 20.27 0 0 0 10.14-17.55z" fill="#ffd700" opacity=".2"></path>
+		<path d="M99.36 96.64a.45.45 0 0 1-.38-.52.44.44 0 0 1 .51-.38.45.45 0 0 1 .38.52.45.45 0 0 1-.45.38h-.06zm-1.8-.29a.47.47 0 0 1-.38-.52.45.45 0 0 1 .53-.37.44.44 0 0 1 .37.51.45.45 0 0 1-.45.38h-.07zm-1.79-.29a.45.45 0 0 1-.37-.52.44.44 0 0 1 .51-.37.44.44 0 0 1 .38.51.44.44 0 0 1-.45.38h-.07zM94 95.77a.46.46 0 0 1-.38-.51.46.46 0 0 1 .53-.38.45.45 0 0 1 .37.52.46.46 0 0 1-.45.38H94zm-1.79-.28a.45.45 0 0 1-.37-.52.43.43 0 0 1 .51-.37.44.44 0 0 1 .38.51.44.44 0 0 1-.45.38h-.07zm-1.81-.29a.45.45 0 0 1-.38-.51.46.46 0 0 1 .53-.38.44.44 0 0 1 .37.51.46.46 0 0 1-.45.39h-.07zm-1.79-.29a.45.45 0 0 1-.38-.51.44.44 0 0 1 .52-.37.44.44 0 0 1 .38.51.44.44 0 0 1-.45.38h-.07zm-1.79-.28a.45.45 0 0 1-.37-.52.45.45 0 0 1 .52-.37.44.44 0 0 1 .37.51.45.45 0 0 1-.45.38h-.07zM85 94.34a.44.44 0 0 1-.38-.51.44.44 0 0 1 .51-.38.45.45 0 0 1 .38.52.45.45 0 0 1-.45.38H85zm-1.8-.28a.45.45 0 0 1-.37-.52.45.45 0 0 1 .52-.38.46.46 0 0 1 .37.52.45.45 0 0 1-.45.38h-.07zm-1.78-.29a.45.45 0 0 1-.39-.51.47.47 0 0 1 .52-.39.46.46 0 0 1 .38.52.44.44 0 0 1-.45.39h-.06zm-1.8-.29a.44.44 0 0 1-.37-.52.45.45 0 0 1 .52-.37.46.46 0 0 1 .37.52.45.45 0 0 1-.45.38h-.07zm-1.79-.28a.47.47 0 0 1-.38-.53.47.47 0 0 1 .55-.37.46.46 0 0 1 .38.52.44.44 0 0 1-.45.38h-.07zm-1.79-.29a.45.45 0 0 1-.37-.52.46.46 0 0 1 .51-.38.46.46 0 0 1 .38.53.46.46 0 0 1-.45.38h-.07zm-1.79-.28a.47.47 0 0 1-.38-.53.46.46 0 0 1 .52-.37.45.45 0 0 1 .38.52.44.44 0 0 1-.45.38h-.07zm-1.79-.29a.45.45 0 0 1-.37-.52.46.46 0 0 1 .52-.38.46.46 0 0 1 .39.56.46.46 0 0 1-.45.39h-.05z" fill="#ffd700"></path>
+		<path d="M57.99 73.5l34.06-15.22" fill="#ffd700"></path>
+		<path d="M57.811 73.092l34.06-15.229.372.83-34.06 15.23zM38.97 39.585l.798-.436L57.31 71.294l-.799.436z" fill="#ffd700"></path>
+		<circle cx="40.18" cy="40.18" r="6.44" fill="#ffd700"></circle>
+		<path d="M40.18 47.3a7.12 7.12 0 1 1 7.12-7.12 7.13 7.13 0 0 1-7.12 7.12zm0-12.88a5.76 5.76 0 1 0 5.76 5.76 5.77 5.77 0 0 0-5.76-5.76zm-9.02 74.39l-.72-.55L57.57 73.3l5.3-24.82.89.19-5.35 25.02-.06.09-27.19 35.03z" fill="#ffd700"></path>
+		<circle cx="63.32" cy="48.58" r="4.31" fill="#ffd700"></circle>
+		<path d="M63.32 53.56a5 5 0 1 1 5-5 5 5 0 0 1-5 5zm0-8.61a3.63 3.63 0 1 0 3.62 3.63A3.64 3.64 0 0 0 63.32 45z" fill="#ffd700"></path>
+		<circle cx="32.59" cy="106.74" r="5.45" fill="#ffd700"></circle>
+		<path d="M32.59 112.87a6.13 6.13 0 1 1 6.14-6.13 6.14 6.14 0 0 1-6.14 6.13zm0-10.9a4.77 4.77 0 1 0 4.78 4.77 4.78 4.78 0 0 0-4.78-4.74zm28.98 1.7l-.64-.65 11.04-10.88-14.34-18.36.72-.56 14.83 19-11.61 11.45z" fill="#ffd700"></path>
+		<circle cx="72.57" cy="91.89" r="4.31" fill="#ffd700"></circle>
+		<path d="M72.57 96.88a5 5 0 1 1 5-5 5 5 0 0 1-5 5zm0-8.62a3.63 3.63 0 1 0 3.63 3.63 3.63 3.63 0 0 0-3.63-3.63z" fill="#ffd700"></path>
+		<circle cx="60.97" cy="103.35" r="4.31" fill="#ffd700"></circle>
+		<path d="M61 108.33a5 5 0 1 1 5-5 5 5 0 0 1-5 5zm0-8.61a3.63 3.63 0 1 0 3.63 3.63A3.63 3.63 0 0 0 61 99.72z" fill="#ffd700"></path>
+		<circle cx="57.99" cy="73.5" r="8.21" fill="#ffd700"></circle>
+		<path d="M58 82.16a8.67 8.67 0 1 1 8.66-8.66A8.67 8.67 0 0 1 58 82.16zm0-16.42a7.76 7.76 0 1 0 7.76 7.76A7.77 7.77 0 0 0 58 65.74zm33.68-6.83l-3.03-21.45.9-.13 2.87 20.31 10.74-4.29.34.84-11.82 4.72z" fill="#ffd700"></path>
+		<circle cx="89.1" cy="36.43" r="4.31" fill="#ffd700"></circle>
+		<path d="M89.1 41.41a5 5 0 1 1 5-5 5 5 0 0 1-5 5zm0-8.61a3.63 3.63 0 1 0 3.63 3.63 3.64 3.64 0 0 0-3.63-3.63z" fill="#ffd700"></path>
+		<circle cx="105.93" cy="52.88" r="4.31" fill="#ffd700"></circle>
+		<path d="M105.93 57.87a5 5 0 1 1 5-5 5 5 0 0 1-5 5zm0-8.61a3.63 3.63 0 1 0 3.63 3.62 3.62 3.62 0 0 0-3.63-3.62zM25.75 73.65L23.44 57.5l.9-.12 2.2 15.34 23.28-.63.03.91-24.1.65z" fill="#ffd700"></path>
+		<circle cx="26.38" cy="73.35" r="4.31" fill="#ffd700"></circle>
+		<path d="M26.37 78.34a5 5 0 0 1-3-1 5 5 0 1 1 3 1zm-2.15-2.07a3.62 3.62 0 0 0 5.07-.76 3.63 3.63 0 0 0-5.83-4.31 3.63 3.63 0 0 0 .76 5.07z" fill="#ffd700"></path>
+		<circle cx="24.05" cy="57.22" r="4.31" fill="#ffd700"></circle>
+		<path d="M24 62.21a5 5 0 0 1-2.95-1 5 5 0 0 1-1.05-7 5 5 0 0 1 7-1 5 5 0 0 1-2.22 8.94 4.74 4.74 0 0 1-.78.06zm-2.1-2.07a3.64 3.64 0 0 0 5.1-.77 3.63 3.63 0 1 0-5.07.77z" fill="#ffd700"></path>
+		<path d="M99.66 96.23l-12.38 17.89" fill="#ffd700"></path>
+		<path d="M86.915 113.858l12.371-17.9.75.517-12.373 17.9zm13.412-15.326l.685-.598 12.37 14.156-.684.599z" fill="#ffd700"></path>
+		<circle cx="114.06" cy="113.5" r="6.44" fill="#ffd700"></circle>
+		<path d="M114.06 120.62h-.26a7 7 0 1 1 .26 0zm0-12.88a6.18 6.18 0 1 0 .22 0zM99.29 96.49L84.85 76.54l17.57.62-.03.9-15.72-.54 13.36 18.44-.74.53z" fill="#ffd700"></path>
+		<circle cx="85.75" cy="77.31" r="4.31" fill="#ffd700"></circle>
+		<path d="M85.76 82.3h-.19a5.08 5.08 0 1 1 .19 0zm0-8.61a3.63 3.63 0 0 0-3.62 3.49 3.64 3.64 0 0 0 3.49 3.76 3.63 3.63 0 1 0 .26-7.25z" fill="#ffd700"></path>
+		<circle cx="102.41" cy="77.61" r="4.31" fill="#ffd700"></circle>
+		<path d="M102.41 82.6h-.18a5 5 0 0 1-4.8-5.16 5 5 0 1 1 5 5.17zm0-8.61a3.56 3.56 0 1 0 .13 0z" fill="#ffd700"></path>
+		<circle cx="99.66" cy="96.23" r="8.21" fill="#ffd700"></circle>
+		<path d="M99.66 104.89h-.32a8.68 8.68 0 0 1-8.34-9 8.67 8.67 0 1 1 8.66 9zm-7.76-9a7.76 7.76 0 1 0 8-7.47 7.78 7.78 0 0 0-8 7.47zm9.29 34.09l-13.85-15.13-6.43 9.62-.76-.5 7.08-10.58 14.63 15.98-.67.61z" fill="#ffd700"></path>
+		<circle cx="87.54" cy="113.86" r="3.95" fill="#ffd700"></circle>
+		<path d="M87.55 118.26a4.45 4.45 0 0 1-.81-.08 4.36 4.36 0 0 1-2.83-1.83 4.41 4.41 0 1 1 3.64 1.91zm0-7.89a3.49 3.49 0 0 0-3.42 2.85 3.45 3.45 0 0 0 .55 2.61 3.5 3.5 0 0 0 4.86.91 3.49 3.49 0 0 0-2-6.37z" fill="#ffd700"></path>
+		<circle cx="102.07" cy="130.47" r="4.31" fill="#ffd700"></circle>
+		<path d="M102.08 135.46a4.86 4.86 0 0 1-.92-.09 4.92 4.92 0 0 1-3.2-2.08 5 5 0 1 1 6.93 1.29 4.92 4.92 0 0 1-2.81.88zm0-8.61a3.62 3.62 0 1 0 3 1.57 3.66 3.66 0 0 0-3.01-1.57z" fill="#ffd700"></path>
+		<circle cx="78.89" cy="126.42" r="4.31" fill="#ffd700"></circle>
+		<path d="M78.89 131.4a5 5 0 0 1-4.12-2.16 5 5 0 0 1 1.3-6.93 4.88 4.88 0 0 1 3.73-.79 5 5 0 0 1-.91 9.88zm-3-2.93a3.63 3.63 0 1 0 3.66-5.62 3.6 3.6 0 0 0-2.72.58 3.64 3.64 0 0 0-.94 5zm56.81-14.91l-1.64-15.41-23.29-.23.01-.9 24.1.23 1.72 16.22-.9.09z" fill="#ffd700"></path>
+		<circle cx="131.25" cy="97.52" r="4.31" fill="#ffd700"></circle>
+		<path d="M131.24 102.51a5 5 0 1 1 3.11-8.89 5 5 0 0 1-2.54 8.86 5.44 5.44 0 0 1-.57.03zm0-8.62h-.41a3.62 3.62 0 0 0-1.85 6.44 3.63 3.63 0 0 0 5.86-3.25 3.66 3.66 0 0 0-1.34-2.43 3.66 3.66 0 0 0-2.25-.76z" fill="#ffd700"></path>
 		<circle cx="132.98" cy="113.73" r="4.31" fill="#51b7b7"></circle>
-		<path d="M133 118.71a5 5 0 1 1 3.12-8.88 5 5 0 0 1-3.12 8.88zm0-8.6a3.62 3.62 0 1 0 2.26.78 3.63 3.63 0 0 0-2.26-.78z" fill="#2a2b60"></path>
+		<path d="M133 118.71a5 5 0 1 1 3.12-8.88 5 5 0 0 1-3.12 8.88zm0-8.6a3.62 3.62 0 1 0 2.26.78 3.63 3.63 0 0 0-2.26-.78z" fill="#ffd700"></path>
 		<circle cx="57.99" cy="73.5" r="4.54" fill="#dab41a"></circle>
 		<path d="M58 78.38a4.88 4.88 0 1 1 4.88-4.88A4.89 4.89 0 0 1 58 78.38zm0-9.08a4.2 4.2 0 1 0 4.2 4.2 4.2 4.2 0 0 0-4.2-4.2z" fill="#2a2b60"></path>
 		<circle cx="99.49" cy="96.2" r="4.54" fill="#dab41a"></circle>
