--- a/DNA/index.html
+++ b/DNA/index.html
@@ -80,34 +80,34 @@
 		<path d="M131.24 102.51a5 5 0 1 1 3.11-8.89 5 5 0 0 1-2.54 8.86 5.44 5.44 0 0 1-.57.03zm0-8.62h-.41a3.62 3.62 0 0 0-1.85 6.44 3.63 3.63 0 0 0 5.86-3.25 3.66 3.66 0 0 0-1.34-2.43 3.66 3.66 0 0 0-2.25-.76z" fill="#ffd700"></path>
 		<circle cx="132.98" cy="113.73" r="4.31" fill="#51b7b7"></circle>
 		<path d="M133 118.71a5 5 0 1 1 3.12-8.88 5 5 0 0 1-3.12 8.88zm0-8.6a3.62 3.62 0 1 0 2.26.78 3.63 3.63 0 0 0-2.26-.78z" fill="#ffd700"></path>
-		<circle cx="57.99" cy="73.5" r="4.54" fill="#dab41a"></circle>
-		<path d="M58 78.38a4.88 4.88 0 1 1 4.88-4.88A4.89 4.89 0 0 1 58 78.38zm0-9.08a4.2 4.2 0 1 0 4.2 4.2 4.2 4.2 0 0 0-4.2-4.2z" fill="#2a2b60"></path>
-		<circle cx="99.49" cy="96.2" r="4.54" fill="#dab41a"></circle>
-		<path d="M99.49 101.08a4.88 4.88 0 1 1 4.88-4.88 4.89 4.89 0 0 1-4.88 4.88zm0-9.08a4.2 4.2 0 1 0 4.2 4.2 4.2 4.2 0 0 0-4.2-4.2z" fill="#2a2b60"></path>
-		<circle cx="93.37" cy="56.78" r="5.32" fill="#fdd52f"></circle>
-		<path d="M93.37 62.55a5.77 5.77 0 1 1 5.77-5.77 5.78 5.78 0 0 1-5.77 5.77zm0-10.64a4.87 4.87 0 1 0 4.86 4.87 4.87 4.87 0 0 0-4.86-4.87z" fill="#2a2b60"></path>
-		<circle cx="93.37" cy="56.78" r="2.88" fill="#dab41a"></circle>
-		<path d="M93.37 60a3.23 3.23 0 1 1 3.22-3.22A3.22 3.22 0 0 1 93.37 60zm0-5.77a2.55 2.55 0 1 0 2.54 2.55 2.55 2.55 0 0 0-2.54-2.55z" fill="#2a2b60"></path>
-		<circle cx="87.54" cy="113.86" r="1.97" fill="#dab41a"></circle>
-		<path d="M87.54 116.17a2.31 2.31 0 1 1 2.32-2.31 2.31 2.31 0 0 1-2.32 2.31zm0-3.94a1.63 1.63 0 1 0 1.64 1.63 1.63 1.63 0 0 0-1.64-1.63z" fill="#2a2b60"></path>
-		<circle cx="31.2" cy="82.14" r=".52" fill="#fdd52f"></circle>
-		<path d="M31.2 82.88a.74.74 0 0 1-.74-.74.74.74 0 1 1 1.48 0 .74.74 0 0 1-.74.74zm0-1a.29.29 0 1 0 .29.29.29.29 0 0 0-.29-.32z" fill="#2a2b60"></path>
-		<circle cx="57.99" cy="126.42" r=".52" fill="#fdd52f"></circle>
-		<path d="M58 127.16a.74.74 0 0 1-.74-.74.74.74 0 1 1 1.48 0 .74.74 0 0 1-.74.74zm0-1a.29.29 0 1 0 .29.29.29.29 0 0 0-.29-.32z" fill="#2a2b60"></path>
-		<circle cx="122.2" cy="65.89" r=".52" fill="#fdd52f"></circle>
-		<path d="M122.2 66.63a.74.74 0 1 1 0-1.48.74.74 0 0 1 0 1.48zm0-1a.29.29 0 1 0 .29.29.29.29 0 0 0-.29-.32z" fill="#2a2b60"></path>
-		<circle cx="135.55" cy="77.66" r=".52" fill="#fdd52f"></circle>
-		<path d="M135.55 78.4a.74.74 0 1 1 0-1.48.74.74 0 1 1 0 1.48zm0-1a.29.29 0 1 0 .29.29.29.29 0 0 0-.29-.32z" fill="#2a2b60"></path>
-		<circle cx="53.45" cy="92.41" r=".52" fill="#fdd52f"></circle>
-		<path d="M53.45 93.15a.74.74 0 1 1 0-1.48.74.74 0 1 1 0 1.48zm0-1a.29.29 0 1 0 .29.29.29.29 0 0 0-.29-.32z" fill="#2a2b60"></path>
-		<circle cx="36.86" cy="122.41" r=".52" fill="#fdd52f"></circle>
-		<path d="M36.86 123.15a.74.74 0 1 1 .74-.74.74.74 0 0 1-.74.74zm0-1a.29.29 0 1 0 .29.29.29.29 0 0 0-.29-.32z" fill="#2a2b60"></path>
-		<circle cx="114.06" cy="82.65" r=".52" fill="#fdd52f"></circle>
-		<path d="M114.06 83.4a.75.75 0 0 1-.74-.75.74.74 0 0 1 1.48 0 .75.75 0 0 1-.74.75zm0-1a.29.29 0 1 0 .29.29.29.29 0 0 0-.29-.33z" fill="#2a2b60"></path>
-		<circle cx="60.97" cy="26.82" r=".52" fill="#fdd52f"></circle>
-		<path d="M61 27.56a.74.74 0 0 1 0-1.48.74.74 0 1 1 0 1.48zm0-1a.29.29 0 1 0 .29.29.29.29 0 0 0-.29-.32z" fill="#2a2b60"></path>
-		<circle cx="70.95" cy="33.74" r=".52" fill="#fdd52f"></circle>
-		<path d="M71 34.49a.75.75 0 1 1 .74-.74.74.74 0 0 1-.74.74zm0-1a.29.29 0 1 0 .29.29.29.29 0 0 0-.29-.32z" fill="#2a2b60"></path>
+		<circle cx="57.99" cy="73.5" r="4.54" fill="#ffd700"></circle>
+		<path d="M58 78.38a4.88 4.88 0 1 1 4.88-4.88A4.89 4.89 0 0 1 58 78.38zm0-9.08a4.2 4.2 0 1 0 4.2 4.2 4.2 4.2 0 0 0-4.2-4.2z" fill="#ffd700"></path>
+		<circle cx="99.49" cy="96.2" r="4.54" fill="#ffd700"></circle>
+		<path d="M99.49 101.08a4.88 4.88 0 1 1 4.88-4.88 4.89 4.89 0 0 1-4.88 4.88zm0-9.08a4.2 4.2 0 1 0 4.2 4.2 4.2 4.2 0 0 0-4.2-4.2z" fill="#ffd700"></path>
+		<circle cx="93.37" cy="56.78" r="5.32" fill="#ffd700"></circle>
+		<path d="M93.37 62.55a5.77 5.77 0 1 1 5.77-5.77 5.78 5.78 0 0 1-5.77 5.77zm0-10.64a4.87 4.87 0 1 0 4.86 4.87 4.87 4.87 0 0 0-4.86-4.87z" fill="#ffd700"></path>
+		<circle cx="93.37" cy="56.78" r="2.88" fill="#ffd700"></circle>
+		<path d="M93.37 60a3.23 3.23 0 1 1 3.22-3.22A3.22 3.22 0 0 1 93.37 60zm0-5.77a2.55 2.55 0 1 0 2.54 2.55 2.55 2.55 0 0 0-2.54-2.55z" fill="#ffd700"></path>
+		<circle cx="87.54" cy="113.86" r="1.97" fill="#ffd700"></circle>
+		<path d="M87.54 116.17a2.31 2.31 0 1 1 2.32-2.31 2.31 2.31 0 0 1-2.32 2.31zm0-3.94a1.63 1.63 0 1 0 1.64 1.63 1.63 1.63 0 0 0-1.64-1.63z" fill="#ffd700"></path>
+		<circle cx="31.2" cy="82.14" r=".52" fill="#ffd700"></circle>
+		<path d="M31.2 82.88a.74.74 0 0 1-.74-.74.74.74 0 1 1 1.48 0 .74.74 0 0 1-.74.74zm0-1a.29.29 0 1 0 .29.29.29.29 0 0 0-.29-.32z" fill="#ffd700"></path>
+		<circle cx="57.99" cy="126.42" r=".52" fill="#ffd700"></circle>
+		<path d="M58 127.16a.74.74 0 0 1-.74-.74.74.74 0 1 1 1.48 0 .74.74 0 0 1-.74.74zm0-1a.29.29 0 1 0 .29.29.29.29 0 0 0-.29-.32z" fill="#ffd700"></path>
+		<circle cx="122.2" cy="65.89" r=".52" fill="#ffd700"></circle>
+		<path d="M122.2 66.63a.74.74 0 1 1 0-1.48.74.74 0 0 1 0 1.48zm0-1a.29.29 0 1 0 .29.29.29.29 0 0 0-.29-.32z" fill="#ffd700"></path>
+		<circle cx="135.55" cy="77.66" r=".52" fill="#ffd700"></circle>
+		<path d="M135.55 78.4a.74.74 0 1 1 0-1.48.74.74 0 1 1 0 1.48zm0-1a.29.29 0 1 0 .29.29.29.29 0 0 0-.29-.32z" fill="#ffd700"></path>
+		<circle cx="53.45" cy="92.41" r=".52" fill="#ffd700"></circle>
+		<path d="M53.45 93.15a.74.74 0 1 1 0-1.48.74.74 0 1 1 0 1.48zm0-1a.29.29 0 1 0 .29.29.29.29 0 0 0-.29-.32z" fill="#ffd700"></path>
+		<circle cx="36.86" cy="122.41" r=".52" fill="#ffd700"></circle>
+		<path d="M36.86 123.15a.74.74 0 1 1 .74-.74.74.74 0 0 1-.74.74zm0-1a.29.29 0 1 0 .29.29.29.29 0 0 0-.29-.32z" fill="#ffd700"></path>
+		<circle cx="114.06" cy="82.65" r=".52" fill="#ffd700"></circle>
+		<path d="M114.06 83.4a.75.75 0 0 1-.74-.75.74.74 0 0 1 1.48 0 .75.75 0 0 1-.74.75zm0-1a.29.29 0 1 0 .29.29.29.29 0 0 0-.29-.33z" fill="#ffd700"></path>
+		<circle cx="60.97" cy="26.82" r=".52" fill="#ffd700"></circle>
+		<path d="M61 27.56a.74.74 0 0 1 0-1.48.74.74 0 1 1 0 1.48zm0-1a.29.29 0 1 0 .29.29.29.29 0 0 0-.29-.32z" fill=#ffd700"></path>
+		<circle cx="70.95" cy="33.74" r=".52" fill="#ffd700"></circle>
+		<path d="M71 34.49a.75.75 0 1 1 .74-.74.74.74 0 0 1-.74.74zm0-1a.29.29 0 1 0 .29.29.29.29 0 0 0-.29-.32z" fill="#ffd700"></path>
 	</svg>
 
 <div style="
