--- a/DNA/index.html
+++ b/DNA/index.html
@@ -78,7 +78,7 @@
 		<path d="M78.89 131.4a5 5 0 0 1-4.12-2.16 5 5 0 0 1 1.3-6.93 4.88 4.88 0 0 1 3.73-.79 5 5 0 0 1-.91 9.88zm-3-2.93a3.63 3.63 0 1 0 3.66-5.62 3.6 3.6 0 0 0-2.72.58 3.64 3.64 0 0 0-.94 5zm56.81-14.91l-1.64-15.41-23.29-.23.01-.9 24.1.23 1.72 16.22-.9.09z" fill="#ffd700"></path>
 		<circle cx="131.25" cy="97.52" r="4.31" fill="#ffd700"></circle>
 		<path d="M131.24 102.51a5 5 0 1 1 3.11-8.89 5 5 0 0 1-2.54 8.86 5.44 5.44 0 0 1-.57.03zm0-8.62h-.41a3.62 3.62 0 0 0-1.85 6.44 3.63 3.63 0 0 0 5.86-3.25 3.66 3.66 0 0 0-1.34-2.43 3.66 3.66 0 0 0-2.25-.76z" fill="#ffd700"></path>
-		<circle cx="132.98" cy="113.73" r="4.31" fill="#51b7b7"></circle>
+		<circle cx="132.98" cy="113.73" r="4.31" fill="#ffd700"></circle>
 		<path d="M133 118.71a5 5 0 1 1 3.12-8.88 5 5 0 0 1-3.12 8.88zm0-8.6a3.62 3.62 0 1 0 2.26.78 3.63 3.63 0 0 0-2.26-.78z" fill="#ffd700"></path>
 		<circle cx="57.99" cy="73.5" r="4.54" fill="#ffd700"></circle>
 		<path d="M58 78.38a4.88 4.88 0 1 1 4.88-4.88A4.89 4.89 0 0 1 58 78.38zm0-9.08a4.2 4.2 0 1 0 4.2 4.2 4.2 4.2 0 0 0-4.2-4.2z" fill="#ffd700"></path>
