--- a/DNA/img/index.html
+++ b/DNA/img/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>blockchain</title>
      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.6.2/css/bulma.min.css">
-      <style>::-webkit-scrollbar{width:0px;}img{width:100%;}
+      <style>::-webkit-scrollbar{width:0px;}img{width:100%;margin:-3px;}
      </style>
     </head>
   <body style="margin:0;">
