--- a/DNA/img/index.html
+++ b/DNA/img/index.html
@@ -9,12 +9,11 @@
      </style>
     </head>
   <body style="margin:0;">
-	  <h3 style="
-    background-color: #ebb247;
-    color: white;
-">
-		Чтобы стать сильным человеком, не нужно совершать подвигов или управлять окружающими. Достаточно действовать с позиции силы в обычных жизненных ситуациях. Практикуйтесь регулярно, и со временем уверенное поведение станет вашей второй натурой  
-	  </h3>
+	   <h3 style="background-color: #ebb247;color: white;">
+		Чтобы стать сильным человеком, не нужно совершать подвигов или управлять окружающими. 
+		Достаточно действовать с позиции силы в обычных жизненных ситуациях. 
+		Практикуйтесь регулярно, и со временем нужное поведение станет вашей второй натурой.  
+	   </h3>
 	   <center>
  <img src="1.jpg"/>
  <img src="3.jpg"/>
