--- a/DNA/index.html
+++ b/DNA/index.html
@@ -122,5 +122,52 @@
     background-position: center;
 "></div>
 
+
+<div class="container">
+	<p class="title"></p>
+	<div class="bottle">
+	  <div class="bottleGap">
+		<div class="bottleLiquid">
+		</div>
+	  </div>
+	</div>
+	<div class="cup">
+	  <div class="cupGap">
+		<div class="cupLiquid">
+		</div>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+	  </div>
+	</div>
+	<div class="filter">
+	  <div class="filterGap">
+		<div class="filterLiquid">
+		</div>
+	  </div>
+	</div>
+	<div class="support">
+	  <div class="supportCross">
+		<div class="dot">
+  
+		</div>
+	  </div>
+	</div>
+	<div class="supportBase">
+	  <div class="dot">
+  
+	  </div>
+	</div>
+	<div class="desk"></div>
+	<div class="bubble1"></div>
+	<div class="bubble2"></div>
+	<div class="bubble3"></div>
+	<div class="drip"></div>
+  
+  </div>
+
 </body>
 </html>
