--- a/DNA/index.html
+++ b/DNA/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="css/style.css"> 
 </head>
   <body style="
     background-image: url(https://raw.githubusercontent.com/CEPBEP/cepbep.github.io/master/DNA/m.png);
