--- a/DNA/img/index.html
+++ b/DNA/img/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>blockchain</title>
+    <link href="https://rosagro-tech.github.io/fonts/eth2/stylesheet.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Megrim&amp;display=swap" rel="stylesheet">
      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.6.2/css/bulma.min.css">
       <style>::-webkit-scrollbar{width:0px;}img{width:100%;margin:-3px;}
