--- a/DNA/img/index.html
+++ b/DNA/img/index.html
@@ -11,7 +11,7 @@
      </style>
     </head>
   <body style="margin:0;">
-	   <h3 style="background-color: #ebb247;color: white;font-family: 'CocoBikeR';">
+	   <h3 style="background-color: #ebb247;color: white;font-family: 'CocoBikeR';text-align: center;">
 		Чтобы стать сильным человеком, не нужно совершать подвигов или управлять окружающими. 
 		Достаточно действовать с позиции силы в обычных жизненных ситуациях. 
 		Практикуйтесь регулярно, и со временем нужное поведение станет вашей второй натурой.  
