--- a/DNA/img/index.html
+++ b/DNA/img/index.html
@@ -18,7 +18,7 @@
 	   </h3>
 	   <center>
  <img src="1.jpg"/>
- <img src="3.jpg"/>
+ <img src="3.png"/>
  <img src="2.jpg"/>
  <img src="4.jpg"/>
  <img src="6.jpg"/>
