--- a/DNA/img/index.html
+++ b/DNA/img/index.html
@@ -12,6 +12,8 @@
     </head>
   <body style="margin:0;">
 	   <h3 style="background-color: #ebb247;color: white;font-family:'CocoBikeR';text-align: center;FONT-SIZE: 1.5EM;">
+- В противовес заслуге, достоинство — императивное понятие (человеку дóлжно быть достойным, тогда как заслуга вменяется человеку в знак одобрения его успехов).
+- В противовес чести, достоинство — отношение к субъекту самого субъекта (честь — уважение субъекта обществом).	
 		Чтобы стать сильным человеком, не нужно совершать подвигов или управлять окружающими. 
 		Достаточно действовать с позиции силы в обычных жизненных ситуациях. 
 		Практикуйтесь регулярно, и со временем нужное поведение станет вашей второй натурой.  
