--- a/DNA/img/index.html
+++ b/DNA/img/index.html
@@ -22,6 +22,11 @@
  <img src="1.jpg"/>
  <img src="3.png" style="background-color:#a66c18;"/>
  <img src="2.jpg"/>
+		      <h3 style="background-color: #ebb247;color: white;font-family:'CocoBikeR';text-align: center;FONT-SIZE: 1.5EM;">
+- В противовес заслуге, достоинство — императивное понятие (человеку дóлжно быть достойным, тогда как заслуга вменяется человеку в знак одобрения его успехов).
+- В противовес чести, достоинство — отношение к субъекту самого субъекта (честь — уважение субъекта обществом).	
+	 
+		      </h3>
  <img src="4.jpg"/>
  <img src="6.jpg"/>
  <img src="5.jpg"/>
