--- a/DNA/3/index.html
+++ b/DNA/3/index.html
@@ -9,6 +9,7 @@
 <body>
 
 <!-- partial:index.partial.html -->
+<center><img style="width:80%;" src="3.png"/></center>
 <center><img style="width:80%;" src="4.jpg"/></center>
 <center><img style="width:80%;" src="3.jpg"/></center>
 <div id="root">
