--- a/DNA/3/index.html
+++ b/DNA/3/index.html
@@ -6,10 +6,10 @@
   <title>viz</title>
  <script src="https://unpkg.com/seqviz"></script>
 </head>
-<body>
+<body style="margin:0;">
 
 <!-- partial:index.partial.html -->
-<center><img style="width:80%;" src="3.png"/></center>
+<center><img style="width:100%;" src="3.png"/></center>
 <center><img style="width:80%;" src="4.jpg"/></center>
 <center><img style="width:80%;" src="3.jpg"/></center>
 <div id="root">
