--- a/DNA/3/index.html
+++ b/DNA/3/index.html
@@ -5,6 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>viz</title>
  <script src="https://unpkg.com/seqviz"></script>
+	<style> ::-webkit-scrollbar {
+		width: 0;
+			   }</style>
 </head>
 <body style="margin:0;">
 
