--- a/DNA/index.html
+++ b/DNA/index.html
@@ -112,6 +112,8 @@
 		<path d="M71 34.49a.75.75 0 1 1 .74-.74.74.74 0 0 1-.74.74zm0-1a.29.29 0 1 0 .29.29.29.29 0 0 0-.29-.32z" fill="#ffd700"></path>
 	</svg>
 </a>
+
+<a href="https://cepbep.github.io/DNA/2/">
 <div style="
     position: absolute;
     width: 15%;
@@ -123,7 +125,7 @@
     background-repeat: no-repeat;
     background-position: center;
 "></div>
-
+</a>
 
 <div class="container">
 	<p class="title"></p>
