--- a/DNA/index.html
+++ b/DNA/index.html
@@ -4,7 +4,7 @@
 <link rel="stylesheet" href="css/style.css"> 
  </head>
   <body style="
-    background-image: url(https://raw.githubusercontent.com/CEPBEP/cepbep.github.io/master/DNA/m.png);
+    background-image: url(m.png);
     background-size: contain;background-repeat: no-repeat;
     background-color: black;
     background-position: center;
