--- a/DNA/index.html
+++ b/DNA/index.html
@@ -10,7 +10,7 @@
     background-position: center;
 ">
 <br>
-<a href="https://cepbep.github.io/code/"/>    
+<a href="https://cepbep.github.io/$/"/>    
 <svg class="hero_logo__6daEz" width="63" height="60" fill="none" style="
     position: relative;
     left: 14px;
