--- a/DNA/index.html
+++ b/DNA/index.html
@@ -1,7 +1,10 @@
 <html>
   <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="css/style.css"> 
+<link rel="stylesheet" href="css/style.css">
+<meta property="og:title" content="VIRTUAL LAB" />
+<meta property="og:type" content="website" />
+<meta property="og:image" content="https://koronaEbola.github.io/1.png" />
  </head>
   <body style="
     background-image: url(m.png);
