--- a/DNA/index.html
+++ b/DNA/index.html
@@ -12,6 +12,21 @@
     background-color: black;
     background-position: center;
 ">
+
+<img src="https://koronaebola.github.io/hdni.jpg" style="
+    width: 20%;
+    position: absolute;
+    right: 0;
+    top: 32vh;
+">
+
+<img src="https://koronaebola.github.io/ue.jpg" style="
+    width: 20%;
+    position: absolute;
+    top: 30vh;
+    /* left: 156px; */
+">
+
 <br>
 <a href="https://cepbep.github.io/$/"/>    
 <svg class="hero_logo__6daEz" width="63" height="60" fill="none" style="
