--- a/DNA/index.html
+++ b/DNA/index.html
@@ -20,7 +20,7 @@
     top: 32vh;
 ">
 
-<img src="https://koronaebola.github.io/ue.jpg" style="
+<img src="https://koronaebola.github.io/ue.png" style="
     width: 20%;
     position: absolute;
     top: 30vh;
