--- a/DNA/index.html
+++ b/DNA/index.html
@@ -12,8 +12,7 @@
     background-color: black;
     background-position: center;
 ">
-<img src="https://koronaebola.github.io/hdni.jpg" style="width: 20%;position: absolute;right: 0;top: 33vh;">
-<img src="https://koronaebola.github.io/ue.png" style="width: 20%;position: absolute;top: 30vh;">
+<img src="https://koronaebola.github.io/logos1.jpg" style="width: 25%;position: absolute;top: 27vh;">
 <br>
 <a href="https://cepbep.github.io/$/"/>    
 <svg class="hero_logo__6daEz" width="63" height="60" fill="none" style="
