--- a/DNA/companies.html
+++ b/DNA/companies.html
@@ -5,6 +5,9 @@
 <meta property="og:title" content="VIRTUAL LAB" />
 <meta property="og:type" content="website" />
 <meta property="og:image" content="https://koronaEbola.github.io/1.png" />
+<style>
+img {width: 100%;}::-webkit-scrollbar{width:0px;}
+</style>
  </head>
   <body style="
   /*background-image: url(m.png);*/
