--- a/DNA/index.html
+++ b/DNA/index.html
@@ -12,7 +12,9 @@
     background-color: black;
     background-position: center;
 ">
+<a href="companies.html">"
 <img src="https://koronaebola.github.io/logos1.jpg" style="width: 25%;position: absolute;top: 27vh;">
+</a>
 <br>
 <a href="https://cepbep.github.io/$/"/>    
 <svg class="hero_logo__6daEz" width="63" height="60" fill="none" style="
