--- a/DNA/companies.html
+++ b/DNA/companies.html
@@ -9,12 +9,8 @@
 img {width: 100%;}::-webkit-scrollbar{width:0px;}
 </style>
  </head>
-  <body style="
-  /*background-image: url(m.png);*/
-    background-size: contain;background-repeat: no-repeat;
-    background-color: black;
-    background-position: center;
-">
+
+  <body style="background-size: contain;background-repeat: no-repeat;background-color: black;background-position: center;">
 
 <a href="https://www.eppendorf.com/">
  <img src="https://koronaebola.github.io/Eppendorf.png"/>
