--- a/DNA/index.html
+++ b/DNA/index.html
@@ -6,16 +6,14 @@
 <meta property="og:type" content="website" />
 <meta property="og:image" content="https://koronaEbola.github.io/1.png" />
  </head>
-  <body style="
-    background-image: url(m.png);
-    background-size: contain;background-repeat: no-repeat;
-    background-color: black;
-    background-position: center;
-">
-<a href="companies.html">"
-<img src="https://koronaebola.github.io/logos1.jpg" style="width: 25%;position: absolute;top: 27vh;">
+  <body style="background-image: url(m.png);background-size: contain;background-repeat: no-repeat;background-color: black;background-position: center;">
+
+<a href="companies.html">
+  <img src="https://koronaebola.github.io/logos1.jpg" style="width: 25%;position: absolute;top: 27vh;">
 </a>
+
 <br>
+
 <a href="https://cepbep.github.io/$/"/>    
 <svg class="hero_logo__6daEz" width="63" height="60" fill="none" style="
     position: relative;
