--- a/DNA/index.html
+++ b/DNA/index.html
@@ -9,7 +9,7 @@
   <body style="background-image: url(m.png);background-size: contain;background-repeat: no-repeat;background-color: black;background-position: center;">
 
 <a href="companies.html">
-  <img src="https://koronaebola.github.io/logos1.jpg" style="width: 25%;position: absolute;top: 27vh;">
+  <img src="https://koronaebola.github.io/l1.png" style="width: 29%;position: absolute;top: 22vh;">
 </a>
 
 <br>
