--- a/DNA/index.html
+++ b/DNA/index.html
@@ -131,7 +131,8 @@
 "></div>
 </a>
 
-<div class="container">
+<a href="videos.html">
+  <div class="container">
 	<p class="title"></p>
 	<div class="bottle">
 	  <div class="bottleGap">
@@ -176,6 +177,7 @@
 	<div class="drip"></div>
   
   </div>
+</a>
 
 </body>
 </html>
