--- a/DNA/2/index.html
+++ b/DNA/2/index.html
@@ -85,6 +85,7 @@
   </center>
   <br>
 <h3 style="text-align:center;color:white;">Преобразование цифровой информации в элементы ДНК</h3>
+<iframe style="width:100%;height:35vh;border:0;border-radius:10px;" src="https://molview.org/"></iframe>
 <form class="form-translator-container">
   <div class="form-input-container" id="form-text-dna">
     <label class="form_label" for="user-input">любая информация</label>
