--- a/DNA/2/index.html
+++ b/DNA/2/index.html
@@ -7,7 +7,7 @@
   </head>
 <body style="background-color:#1b1c1e;">
 
-<style>
+<style>::-webkit-scrollbar{width:0;}
   .form-textarea {
     overflow-x: hidden;
     outline: none;border-radius: 8px;
