--- a/DNA/2/lil.cypher.html
+++ b/DNA/2/lil.cypher.html
@@ -110,20 +110,20 @@
     <!-- Encoder Card -->
     <div class="card">
       <h2>Из Данных → в ДНК</h2>
-      <textarea id="user-input" placeholder="Введите текст..."></textarea>
+      <textarea id="user-input" placeholder="Сюда : Любые Цифровые Данные в Виде Последовательности ДНК"></textarea>
       <div class="text-counter">Байты: 0 из 1024</div>
       <button id="encodeButton" class="button">↻ Заморочить</button>
       <div class="output">
-        <textarea id="dna-output" readonly placeholder="Любые Цифровые Данные в Виде Последовательности ДНК"></textarea>
+        <textarea id="dna-output" readonly placeholder="Отсюда : Стандартный Фарш Виде Последовательности ДНК"></textarea>
       </div>
     </div>
     <!-- Decoder Card -->
     <div class="card">
       <h2>Из ДНК  → в Данные</h2>
-      <textarea id="dna-input" placeholder="Вставьте ДНК-последовательность..."></textarea>
+      <textarea id="dna-input" placeholder="Вставьте Стандартный Фарш Из ДНК"></textarea>
       <button id="decodeButton" class="button">⇦ Разморочить</button>
       <div class="output">
-        <textarea id="decoded-text" readonly placeholder="Любые Цифровые Данные"></textarea>
+        <textarea id="decoded-text" readonly placeholder="Отсюда : Цифровые Данные"></textarea>
       </div>
     </div>
   </div>
